<resources>
    <string name="app_name">wellcome</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_menu">Menu</string>
    <string name="cat_textfield_title" translatable="false">Text Field</string>
    <string name="cat_textfield_filled_demo_title" translatable="false">Filled Text Field Demo</string>
    <string name="cat_textfield_filled_icons_demo_title" translatable="false">Filled Icons Text Field Demo</string>
    <string name="cat_textfield_exposed_dropdown_menu_demo_title" translatable="false">Exposed Dropdown Menu Demo</string>
    <string name="cat_textfield_outlined_demo_title" translatable="false">Outlined Text Field Demo</string>
    <string name="cat_textfield_outlined_icons_demo_title" translatable="false">Outlined Icons Text Field Demo</string>
    <string name="cat_textfield_prefix_suffix_demo_title" translatable="false">Prefix and Suffix Text Field Demo</string>
    <string name="cat_textfield_legacy_demo_title" translatable="false">Legacy Text Field Demo</string>
    <string name="cat_textfield_description" translatable="false">
    Text fields allow users to input, edit, and select text. Text fields typically reside in forms
    but can appear in other places, like dialog boxes and search.
  </string>
    <string name="cat_textfield_filled_helper_text" translatable="false">Filled text field</string>
    <string name="cat_textfield_filled_dense_helper_text" translatable="false">Dense filled text field</string>
    <string name="cat_textfield_filled_dense_password_helper_text" translatable="false">
    Dense filled password text field
  </string>
    <string name="cat_textfield_filled_start_icon_helper_text" translatable="false">Filled start icon text field</string>
    <string name="cat_textfield_filled_start_end_icons_helper_text" translatable="false">Filled start and end icons text field</string>
    <string name="cat_textfield_filled_clear_button_helper_text" translatable="false">Filled clear button text field</string>
    <string name="cat_textfield_filled_custom_end_icon_helper_text" translatable="false">Filled custom end icon text field</string>
    <string name="cat_textfield_filled_exposed_dropdown_helper_text" translatable="false">Filled exposed dropdown menu</string>
    <string name="cat_textfield_filled_editable_exposed_dropdown_helper_text" translatable="false">Filled editable exposed dropdown menu</string>
    <string name="cat_textfield_legacy_helper_text" translatable="false">Legacy text field</string>
    <string name="cat_textfield_outlined_helper_text" translatable="false">Outlined text field</string>
    <string name="cat_textfield_outlined_dense_helper_text" translatable="false">Dense outlined text field</string>
    <string name="cat_textfield_outlined_dense_password_helper_text" translatable="false">
    Outlined filled password text field
  </string>
    <string name="cat_textfield_outlined_start_icon_helper_text" translatable="false">Outlined start icon text field</string>
    <string name="cat_textfield_outlined_start_end_icons_helper_text" translatable="false">Outlined start and end icons text field</string>
    <string name="cat_textfield_outlined_clear_button_helper_text" translatable="false">Outlined clear button text field</string>
    <string name="cat_textfield_outlined_custom_end_icon_helper_text" translatable="false">Outlined custom end icon text field</string>
    <string name="cat_textfield_custom_end_icon_content_description" translatable="false">Custom end icon</string>
    <string name="cat_textfield_custom_start_icon_content_description" translatable="false">Custom start icon</string>
    <string name="cat_textfield_outlined_exposed_dropdown_helper_text" translatable="false">Outlined exposed dropdown menu</string>
    <string name="cat_textfield_outlined_editable_exposed_dropdown_helper_text" translatable="false">Outlined editable exposed dropdown menu</string>
    <string name="cat_textfield_prefix" translatable="false">$</string>
    <string name="cat_textfield_suffix" translatable="false">/100</string>
    <string name="cat_textfield_outlined_prefix_helper_text" translatable="false">Outlined text field with prefix</string>
    <string name="cat_textfield_outlined_prefix_icon_helper_text" translatable="false">Outlined text field with prefix and icon</string>
    <string name="cat_textfield_outlined_suffix_helper_text" translatable="false">Outlined text field with suffix</string>
    <string name="cat_textfield_outlined_suffix_icon_helper_text" translatable="false">Outlined text field with suffix and icon</string>
    <string name="cat_textfield_filled_prefix_helper_text" translatable="false">Filled text field with prefix</string>
    <string name="cat_textfield_filled_prefix_icon_helper_text" translatable="false">Filled text field with prefix and icon</string>
    <string name="cat_textfield_filled_suffix_helper_text" translatable="false">Filled text field with suffix</string>
    <string name="cat_textfield_filled_suffix_icon_helper_text" translatable="false">Filled text field with suffix and icon</string>
    <string name="cat_textfield_customize_section_title" translatable="false">Customize text fields</string>
    <string name="cat_textfield_customize_section_description" translatable="false">
    Enter values below to customize the text fields above. Press \"done\" to update each field.
  </string>
    <string name="cat_textfield_label" translatable="false">Label</string>
    <string name="cat_textfield_password" translatable="false">Password</string>
    <string name="cat_textfield_error" translatable="false">Error</string>
    <string name="cat_textfield_placeholder_text" translatable="false">Placeholder text</string>
    <string name="cat_textfield_customize_counter_text" translatable="false">Update character counter max</string>
    <string name="cat_textfield_customize_label_text" translatable="false">Update label text</string>
    <string name="cat_textfield_customize_error_text" translatable="false">Update error text</string>
    <string name="cat_textfield_customize_helper_text" translatable="false">Update helper text</string>
    <string name="cat_textfield_customize_placeholder_text" translatable="false">Update placeholder text</string>
    <string name="cat_textfield_null_input_error_text" translatable="false">Enter a value</string>
    <string name="cat_textfield_show_error_text" translatable="false">Show error</string>
    <string name="cat_textfield_hide_error_text" translatable="false">Hide error</string>
    <string-array name="cat_textfield_exposed_dropdown_content" translatable="false">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
    </string-array>
    <string name="cat_textfield_show_leading_icon" translatable="false">Show leading icon</string>
    <string name="cat_textfield_hide_leading_icon" translatable="false">Hide leading icon</string>
    <string name="cat_textfield_label_enabled" description="Label on a switch to enable text fields.[CHAR_LIMIT=10]">Text fields enabled</string>
    <string name="cat_textfield_toast_label_text" description="Announcement for when label is updated.[CHAR_LIMIT=NONE]">Labels updated.</string>
    <string name="cat_textfield_toast_error_text" description="Announcement for when error text is updated.[CHAR_LIMIT=NONE]">Error messages updated.</string>
    <string name="cat_textfield_toast_helper_text" description="Announcement for when helper text is updated.[CHAR_LIMIT=NONE]">Helper texts updated.</string>
    <string name="cat_textfield_toast_counter_text" description="Announcement for when counter max is updated.[CHAR_LIMIT=NONE]">Max counters updated.</string>
    <string name="cat_textfield_toast_placeholder_text" description="Announcement for when placeholder text is updated.[CHAR_LIMIT=NONE]">Placeholders updated.</string>
    <string name="cat_textfield_toast_error_icon_click" description="Announcement for when error icon is clicked.[CHAR_LIMIT=NONE]">Error icon clicked.</string>
    <string name="cat_textfield_toast_error_icon_long_click" description="Announcement for when error icon is long clicked.[CHAR_LIMIT=NONE]">Error icon long clicked.</string>
    <string name="host_added">The hosts has been added succesfuly !</string>
    <string name="assistance_added">The assistance has been added succesfuly !</string>
    <string name="cours_added">The assistance has been added succesfuly !</string>
    <string name="yes">OK</string>
    <string name="no">Cancel</string>
    <string name="help_type" translatable="false">Select Type of help</string>
    <string name="lesson_type" translatable="false">Select Type of lesson</string>
    <string name="type_informatique" translatable="false">informatique</string>
    <string name="type_informatique_details" translatable="false">lesson of informatique</string>
    <string name="type_marketing" translatable="false">marketing</string>
    <string name="type_marketing_details" translatable="false">lesson of marketing</string>
    <string name="type_music" translatable="false">music</string>
    <string name="type_music_details" translatable="false">lesson of music</string>
    <string name="lesson_duration" translatable="false">Select duration of lesson</string>
    <string name="duration_3" translatable="false">long</string>
    <string name="duration_3_details" translatable="false">More than 72 hours</string>
    <string name="duration_2" translatable="false">normal</string>
    <string name="duration_2_details" translatable="false">36 - 72 hours</string>
    <string name="duration_1" translatable="false">short</string>
    <string name="duration_1_details" translatable="false">less than 36 hours</string>
    <string name="host_restrictions" translatable="false">Select Travelers</string>
    <string name="dates" translatable="false">Select Dates</string>
    <string name="Location" translatable="false">Select Location</string>
    <string name="host_restrictions_form" translatable="false">Select Restrictions</string>
    <string name="search">Search</string>
    <string name="saved">Saved</string>
    <string name="trips">Trips</string>
    <string name="assitance">Assistance</string>
    <string name="lesson">Lesson</string>
    <string name="lesson_fragment">lesson_fragment</string>
    <string name="host_fragment">host_fragment</string>
    <string name="host_details_fragment">hosts_details_fragment</string>
    <string name="menu">Menu</string>
    <string name="add_host_address">add_host_address</string>
    <string name="add_host_picture">add_host_picture</string>
    <string name="title">Title</string>
    <string name="beautiful_host_in_monaco">Beautiful host in Monaco</string>
    <string name="description">Description</string>
    <string name="add_one_desription_for_the_host">Add one desription for the host</string>
    <string name="add_host_configuration">add_host_configuration</string>
    <string name="add_host_restrictions">add_host_restrictions</string>
    <string name="add_host_description">add_host_descriptions</string>
    <string name="navigation">navigation</string>
    <string name="trip_fragment">trip_fragment</string>
    <string name="login">Login</string>
    <string name="YourProfile">Your profile</string>
    <string name="SignInMessage">Sign in to manage your trips and start planning them.</string>
    <string name="LogIn">Log In</string>
    <string name="NoAccount">Don\'t have an account?</string>
    <string name="SignUp"><u>Sign up</u></string>
    <string name="FirstName">First name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Continue">Continue</string>
    <string name="LogIn_Info">To Log In make sure you have already created an account</string>
    <string name="manage_account">Manage your account</string>
    <string name="reservations">Reservations</string>
</resources>