 <menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:iconTint="@color/crane_purple_800"
            android:id="@+id/page_1"
            android:enabled="true"
            android:icon="@drawable/baseline_people_24"
            android:title="@string/search"/>
    <item
            android:iconTint="@color/crane_purple_800"
            android:id="@+id/page_2"
            android:enabled="true"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/saved"/>

    <item
            android:iconTint="@color/crane_purple_800"
            android:id="@+id/page_3"
            android:enabled="true"
            android:icon="@drawable/baseline_menu_24"
            android:title="@string/menu"/>

    <item
            android:visible="false"
            android:iconTint="@color/crane_purple_800"
            android:id="@+id/page_4"
            android:enabled="true"
            android:icon="@drawable/outline_account_circle_24"
            android:title="@string/login"/>
</menu>