<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nav_graph"
        app:startDestination="@id/navigationFragment">
    <fragment
            android:id="@+id/navigationFragment"
            android:name="com.example.wellcome.NavigationFragment"
            android:label="@string/navigation"
            tools:layout="@layout/fragment_navigation" >
        <action
                android:id="@+id/navigate_to_hosts"
                app:destination="@id/hostFragment" />
        <action
                android:id="@+id/navigate_to_add_address"
                app:destination="@id/address_from" />
        <action
                android:id="@+id/navigate_to_manage_account"
                app:destination="@id/manage_account_from" />
        <action
            android:id="@+id/navigate_to_lessons"
            app:destination="@id/lessonFragment" />
        <action
            android:id="@+id/navigate_to_trips"
            app:destination="@id/TripFragment" />
        <action
            android:id="@+id/navigate_to_helps"
            app:destination="@id/HelpFragment" />
        <action
                android:id="@+id/navigate_to_view_reservations"
                app:destination="@id/view_reservations" />
    </fragment>
    <fragment
            android:id="@+id/hostFragment"
            android:name="com.example.wellcome.HostsFragment"
            android:label="@string/host_fragment"
            tools:layout="@layout/fragment_hosts" >
        <action
                android:id="@+id/navigate_to_host_details"
                app:destination="@id/hostDetails" />
        <action
            android:id="@+id/navigate_to_main"
            app:destination="@id/navigationFragment" />
    </fragment>
    <fragment
        android:id="@+id/lessonFragment"
        android:name="com.example.wellcome.LessonFragment"
        android:label="@string/lesson_fragment"
        tools:layout="@layout/fragment_lesson" >
    </fragment>
    <fragment
        android:id="@+id/HelpFragment"
        android:name="com.example.wellcome.HelpFragment"
        android:label="help_fragment"
        tools:layout="@layout/fragment_help" >
    </fragment>
    <fragment
        android:id="@+id/TripFragment"
        android:name="com.example.wellcome.TripFragment"
        android:label="@string/trip_fragment"
        tools:layout="@layout/fragment_trip" >
    </fragment>
    <fragment
            android:id="@+id/hostDetails"
            android:name="com.example.wellcome.HostDetailsFragment"
            android:label="@string/host_details_fragment"
            tools:layout="@layout/fragment_host_details" >
    </fragment>

    <fragment
            android:id="@+id/address_from"
            android:name="com.example.wellcome.AddHostAddressFragment"
            android:label="@string/add_host_address"
            tools:layout="@layout/fragment_add_host_address" >
        <action
                android:id="@+id/navigate_to_add_picture"
                app:destination="@id/picture_from" />
    </fragment>

    <fragment
            android:id="@+id/picture_from"
            android:name="com.example.wellcome.AddHostPictureFragment"
            android:label="@string/add_host_picture"
            tools:layout="@layout/fragment_add_host_picture" >
        <action
                android:id="@+id/navigate_to_add_restrictions"
                app:destination="@id/restrictions_from" />
    </fragment>

    <fragment
            android:id="@+id/restrictions_from"
            android:name="com.example.wellcome.AddHostRestrictionsFragment"
            android:label="@string/add_host_restrictions"
            tools:layout="@layout/fragment_add_host_restrictions" >
        <action
                android:id="@+id/navigate_to_add_configuration"
                app:destination="@id/configuration_from" />
    </fragment>

    <fragment
            android:id="@+id/configuration_from"
            android:name="com.example.wellcome.AddHostConfigurationFragment"
            android:label="@string/add_host_configuration"
            tools:layout="@layout/fragment_add_host_configuration" >
        <action
                android:id="@+id/navigate_to_add_descriptions"
                app:destination="@id/descriptions_from" />
    </fragment>

    <fragment
            android:id="@+id/descriptions_from"
            android:name="com.example.wellcome.AddHostDescriptionFragment"
            android:label="@string/add_host_description"
            tools:layout="@layout/fragment_add_host_description" >
        <action
                android:id="@+id/navigate_to_navigation_fragment"
                app:destination="@id/navigationFragment" />
    </fragment>

    <fragment
            android:id="@+id/manage_account_from"
            android:name="com.example.wellcome.ManageAccountFragment"
            android:label="@string/manage_account"
            tools:layout="@layout/fragment_manage_account" >
    </fragment>

    <fragment
            android:id="@+id/view_reservations"
            android:name="com.example.wellcome.ReservationsFragment"
            android:label="@string/reservations"
            tools:layout="@layout/fragment_reservations" >
    </fragment>
</navigation>