<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MenuFragment">

    <LinearLayout
            android:layout_marginHorizontal="30dp"
            android:id="@+id/top_titles"
            android:layout_marginVertical="30dp"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
                android:id="@+id/menu"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/ralewaybold"
                android:textSize="25dp"
                android:text="@string/YourProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        <TextView
                android:textColor="@color/grey_400"
                android:fontFamily="@font/ralewaybold"
                android:textSize="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/SignInMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
            android:layout_marginBottom="20dp"
            android:layout_below="@id/top_titles"
            android:textColor="@color/white"
            android:layout_marginHorizontal="30dp"
            android:id="@+id/log_in_button"
            app:backgroundTint="@color/crane_purple_700"
            android:textAllCaps="false"
            android:textSize="17dp"
            android:fontFamily="@font/ralewaybold"
            android:text="@string/LogIn"
            android:background="@drawable/rounded_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <LinearLayout
            android:layout_marginHorizontal="30dp"
            android:layout_below="@id/log_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:textColor="@color/grey_400"
                android:fontFamily="@font/ralewaybold"
                android:textSize="14dp"
                android:layout_marginBottom="20dp"
                android:text="@string/NoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_marginLeft="7dp"
                android:textColor="@color/black"
                android:fontFamily="@font/ralewaybold"
                android:textSize="14dp"
                android:layout_marginBottom="20dp"
                android:text="@string/SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>


</RelativeLayout>