<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <include
            layout="@layout/top_app_bar"
            app:titleEnabled="@{true}"
            app:title='@{@string/LogIn}'
            android:id="@+id/top_bar"/>

    <LinearLayout
            android:layout_marginVertical="30dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/credentials"
            android:layout_below="@id/top_bar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="15dp"
                app:hintTextColor="@color/crane_purple_700"
                app:boxStrokeColor="@color/text_input_layout_stroke_color"
                android:id="@+id/email_input_layout"
                app:hintEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/FirstName"
                app:expandedHintEnabled="false"
                app:hintAnimationEnabled="true"
                style="@style/TextInputLayoutStyleEditable">
            <com.google.android.material.textfield.TextInputEditText
                    android:includeFontPadding="false"
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={viewModel.title}"
                    android:textSize="16sp"
                    android:textColorHint="@color/text_edit_color"
                    android:hint="@string/Email"
                    android:textColor="@color/text_edit_color"
                    android:fontFamily="@font/ralewaymedium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_marginHorizontal="25dp"
                android:layout_below="@id/email_input_layout"
                android:layout_marginBottom="5dp"
                app:hintTextColor="@color/crane_purple_700"
                app:boxStrokeColor="@color/text_input_layout_stroke_color"
                android:id="@+id/password_input_layout"
                app:hintEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/FirstName"
                app:expandedHintEnabled="false"
                app:hintAnimationEnabled="true"
                style="@style/TextInputLayoutStyleEditable">
            <com.google.android.material.textfield.TextInputEditText
                    android:includeFontPadding="false"
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={viewModel.title}"
                    android:textSize="16sp"
                    android:textColorHint="@color/text_edit_color"
                    android:hint="@string/Password"
                    android:textColor="@color/text_edit_color"
                    android:fontFamily="@font/ralewaymedium" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
                android:layout_marginHorizontal="25dp"
                android:textColor="@color/grey_400"
                android:fontFamily="@font/ralewaymedium"
                android:textSize="10.5dp"
                android:text="@string/LogIn_Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
            android:layout_marginTop="15dp"
            android:layout_below="@id/credentials"
            android:textColor="@color/white"
            android:layout_marginHorizontal="25dp"
            android:id="@+id/send_reservation_button"
            app:backgroundTint="@color/crane_purple_700"
            android:textAllCaps="false"
            android:textSize="17dp"
            android:fontFamily="@font/ralewaybold"
            android:text="@string/Continue"
            android:background="@drawable/rounded_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
</RelativeLayout>